fixed alignments

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 h1 {
     font-size: 5em;
     font-family: 'eczar';
-    padding-left: 40px;
+    padding-left: 80px;
     font-weight: 500;
     line-height: 1;
     color: #ffffff;
@@ -22,8 +22,8 @@ h1 {
 h3 {
     font-size: 1.3em;
     font-family: 'roboto';
-    padding-left: 40px;
-    padding-right: 20px;
+    padding-left: 80px;
+    padding-right: 40px;
     font-weight: 300;
     color: #fff;
 }
@@ -31,7 +31,7 @@ h3 {
 h2 {
     font-size: 3.5em;
     font-family: 'eczar';
-    padding-left: 40px;
+    padding-left: 80px;
     font-weight: 500;
     line-height: 1.2;
 }
@@ -39,8 +39,8 @@ h2 {
 p {
     font-size: 1.2em;
     font-family: 'roboto';
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
     font-weight: 300;
     color: #666666;
 }
@@ -157,7 +157,7 @@ button:active {
     margin-left: 38vw;
     background-color: black;
     background-color: #000;
-    z-index: 100;
+    z-index: 9;
 }
 
 
@@ -250,7 +250,7 @@ iframe,
     bottom: 100%;
     left: 0;
     right: 0;
-    background-color: #a2dade;
+    background-color: white;
     overflow: hidden;
     width: 100%;
     height: 0;
@@ -550,7 +550,8 @@ iframe,
 }
 
 .app-container .app-title img {
-    padding-left: 40px;
+    padding-left: 80px;
+    padding-top: 20px;
 }
 
 .app-container .app-title img:hover {
